--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.5.9", features = ["derive"] }
 log = "0.4.22"
 pcap = "2.0.0"
 stderrlog = "0.6.0"
