--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ clap = { version = "4.5.9", features = ["derive"] }
 log = "0.4.22"
 pcap = "2.0.0"
 stderrlog = "0.6.0"
+zerocopy = { version = "0.8.0-alpha.16", features = ["derive"] }
